Update contact form thank-you flow and icons

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
   </main>
 
   <footer class="footer">
-    <p>© 2025 Nicolette Lorato Nyoni · Portfolio template</p>
+    <p>© 2025 Nicolette Lorato Nyoni</p>
     <div class="footer__links">
       <a href="#home" class="icon-link" aria-label="Back to top">
         <span aria-hidden="true">↑</span>
