added new project

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </article>
 
         <article class="card">
-
+          <!-- <img src="APP.jpeg" alt="Home Snappers Shoot Performance Dashboard" class="project__image"> -->
           <div class="pill">MQL · DAX · Python · Power BI</div>
           <h3>Home Snappers Shoot Performance Dashboard</h3>
           <p>Analyzed shoot trends by year and photographer performance. Built MongoDB pipelines to extract data and
@@ -110,7 +110,27 @@
           <div class="tags">
             <span>MQL</span><span>DAX</span><span>Python</span><span>Power BI</span>
           </div>
+          <!-- <div class="links">
+            <a href="#" aria-label="Project link placeholder">View project</a>
+          </div> -->
+        </article>
 
+        <article class="card">
+          <img src="dashboard.jpeg" alt="Texas Housing Market Analysis" class="project__image">
+          <div class="pill">Python · Market Analysis · Benchmarking</div>
+          <h3>Texas Housing Market Analysis</h3>
+          <p>Conducted a market benchmarking analysis comparing 4 years of internal shoot volume against DFW housing
+            transaction activity and inventory levels to distinguish internal performance drivers from external market
+            fluctuation.</p>
+          <div class="tags">
+            <span>Python</span><span>Data Analysis</span><span>Market Research</span><span>Benchmarking</span>
+          </div>
+          <div class="links">
+            <a href="https://github.com/LORATONYONI/Texas-Housing-Market-Analysis" target="_blank"
+              rel="noopener noreferrer">View project</a>
+            <a href="https://medium.com/@loratonicolettenyoni/market-benchmarking-analysis-understanding-texas-housing-market-activity-98d427dca8e6?source=friends_link&sk=ac4eef9581f33e4d0efa5baf31da71e4"
+              target="_blank" rel="noopener noreferrer">Read article</a>
+          </div>
         </article>
       </div>
     </section>
